Target Java 8 for Fiji compatibility
Fiji ships Java 1.8.0_172; class file version 55 (Java 11) was rejected.
Changed maven.compiler.source/target/release to 8 (requires openjdk-21-jdk
for ct.sym cross-compilation stubs). Replaced List.of() in tests with
Arrays.asList() for Java 8 compatibility.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>